<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_activity_action_bar_add_group"
        android:icon="@drawable/ic_group_add_white_24dp"
        android:title="@string/main_activity_action_bar_menu_add_group"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_activity_action_bar_enter_group_key"
        android:title="@string/main_activity_action_bar_menu_enter_group_key"
        app:showAsAction="never"/>

    <item
        android:id="@+id/send_feedback"
        android:title="@string/main_activity_action_bar_menu_send_feedback"
        app:showAsAction="never"/>

</menu>

