...
    <string name="group_name">Group\'s name</string>
    <string name="enter_group_key">Enter the key</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="cancel">Cancel</string>
    <string name="Dismiss">Dismiss</string>
    <string name="create">Create</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="join">Join</string>
    <string name="remove">Remove</string>
    <string name="create_new_group">Create new group</string>
    <string name="enter_group_key_dialog_title">Join a group</string>
    <string name="error_group_key_dialog_title">Error</string>
...
